fix: spacing between title and tags

--- a/app/assets/stylesheets/_sn.scss
+++ b/app/assets/stylesheets/_sn.scss
@@ -65,12 +65,8 @@
   margin-right: 0.25rem;
 }
 
-.-ml-1 {
-  margin-left: -0.25rem;
-}
-
-.-ml-2 {
-  margin-right: -0.5rem;
+.-mt-1 {
+  margin-top: -0.25rem;
 }
 
 .-mr-1 {
@@ -189,6 +185,7 @@
 .max-w-290px {
   max-width: 290px;
 }
+
 .max-w-xs {
   max-width: 20rem;
 }
